<resources>
    <string name="app_name">Sikh Centre</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="list_view_button_filter">Filter</string>

    <string name="menu_item_string_refresh">Refresh</string>
    <string name="menu_item_string_settings">Settings</string>
    <string name="menu_item_string_search">Search</string>
    <string name="menu_item_string_report">Report Issue</string>
    <string name="menu_item_string_admin">Admin</string>

    <string name="search_hint">Search an item</string>

    <string name="loading_indicator_title">Please Wait</string>
    <string name="loading_indicator_loading_metadata_text">Refreshing app data</string>
    <string name="loading_indicator_loading_file_text">Downloading File</string>
    <string name="loading_indicator_buffering">Buffering…</string>

    <string name="error_message_downloading_metadata">Error occurred while downloading information</string>
    <string name="error_message_downloading_file">Error occurred while downloading file</string>
    <string name="error_message_no_internet">Check you internet connection</string>
    <string name="error_message_no_storage">File can\'t be downloaded as your external storage is not in mountable state</string>
    <string name="error_message_pdf_no_app">No Application available to view PDF</string>
    <string name="error_message_pdf_not_opening">Error while opening PDF file</string>

    <string name="detail_view_header_author">Author</string>
    <string name="detail_view_header_related_topics">Related Topics</string>
    <string name="detail_view_header_similar_topics">Similar Topics</string>
    <string name="detail_view_header_references">References</string>
    <string name="detail_view_button_file_open">Open</string>
    <string name="detail_view_button_file_download">Download</string>
    <string name="detail_view_button_file_delete">Delete</string>


    <string name="filter_view_button_cancel">Cancel</string>
    <string name="filter_view_button_apply">Apply</string>
    <string name="filter_view_button_clear">Clear</string>
    <string name="filter_view_title">Filter Topics</string>

    <string name="index_key_topic">Topic</string>
    <string name="index_key_tag">Tag</string>
    <string name="index_key_author">Author</string>

</resources>
