<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_action_search"
        android:icon="@drawable/ic_search_red_50_24dp"
        android:title="@string/menu_item_string_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_action_refresh"
        android:icon="@drawable/ic_refresh_red_50_24dp"
        android:orderInCategory="5"
        android:title="@string/menu_item_string_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_action_report"
        android:orderInCategory="99"
        android:title="@string/menu_item_string_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_item_string_settings"
        app:showAsAction="never" />
</menu>
