<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/relativeViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/topicDetailViewCardViewTitle"
                style="@style/cardStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_dimen">

                    <TextView
                        android:id="@+id/topicDetailTextViewTitle"
                        style="@style/titleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <FrameLayout
                        android:id="@+id/topicDetailFrameLayoutContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/topicDetailViewCardViewAuthor"
                style="@style/cardStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_dimen">

                    <TextView
                        android:id="@+id/topicDetailTextViewAuthor"
                        style="@style/subTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_header_author"/>

                    <TableLayout
                        android:id="@+id/topicDetailTableLayoutAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/topicDetailViewCardViewRelatedTopics"
                style="@style/cardStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_dimen">

                    <TextView
                        android:id="@+id/topicDetailTextViewRelatedTopics"
                        style="@style/subTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_header_related_topics" />

                    <TableLayout
                        android:id="@+id/topicDetailTableLayoutRelatedTopics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/topicDetailViewCardViewSimilarTopics"
                style="@style/cardStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_dimen">

                    <TextView
                        android:id="@+id/topicDetailTextViewSimilarTopics"
                        style="@style/subTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_header_similar_topics"/>

                    <TableLayout
                        android:id="@+id/topicDetailTableLayoutSimilarTopics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/topicDetailViewCardViewReferences"
                style="@style/cardStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_dimen">

                    <TextView
                        android:id="@+id/topicDetailTextViewReferences"
                        style="@style/subTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_header_references"/>

                    <TableLayout
                        android:id="@+id/topicDetailTableLayoutReferences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar_audio"
        layout="@layout/audio_toolbar"
        android:visibility="gone" />
</RelativeLayout>